rust/transpiler/tests/errors/unclosed_try.hyper
try:
    <span>{risky()}</span>
except ValueError:
    <span>Error</span>
